--- a/GuardianCapitalLLC/Views/Shared/Error.cshtml
+++ b/GuardianCapitalLLC/Views/Shared/Error.cshtml
@@ -65,7 +65,7 @@
 	<div class="page">
 		<!-- Main-error-wrapper -->
 		<div class="main-error-wrapper page page-h">
-			<h1 class="text-white">An error occurred while processing your request.<span class="tx-20">error</span></h1>
+			<h1 class="text-white"><span class="tx-20">An error occurred while processing your request.</span></h1>
 			@if (User.IsInRole("Client"))
 			{
 				<a asp-controller="Account" asp-action="Index" class="btn btn-light">Back to Home</a>
