--- a/GuardianCapitalLLC/Views/Account/Index.cshtml
+++ b/GuardianCapitalLLC/Views/Account/Index.cshtml
@@ -2,28 +2,9 @@
 @using System.Text.RegularExpressions
 @{
 	Layout = "_ClientLayout";
-	var hour = DateTime.Now.Hour;
-	string greeting;
-
-	if (hour >= 5 && hour < 12)
-	{
-		greeting = "Good morning";
-	}
-	else if (hour >= 12 && hour < 18)
-	{
-		greeting = "Good afternoon";
-	}
-	else if (hour >= 18 && hour < 22)
-	{
-		greeting = "Good evening";
-	}
-	else
-	{
-		greeting = "Good night";
-	}
 }
 <div class="row account-information">
-	<div class="col-xxl-5 col-xl-12 col-lg-12 col-md-12 col-sm-12">
+	<div class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12">
 		<div class="row">
 			<div class="col-xl-12 col-lg-12 col-md-12 col-xs-12">
 				<div class="card p-2">
@@ -31,7 +12,7 @@
 						<div class="row">
 							<div class="col-xl-9 col-lg-7 col-md-6 col-sm-12">
 								<div class="text-justified align-items-center">
-									<h3 class="text-dark font-weight-semibold mb-2 mt-0">@greeting, <span class="text-primary">@Model.FullName</span></h3>
+									<h3 class="text-dark font-weight-semibold mb-2 mt-0">Welcome back, <span class="text-primary">@Model.FullName</span></h3>
 								</div>
 							</div>
 						</div>
@@ -73,8 +54,11 @@
 								</div>
 							}
 						</div>
-						<a asp-controller="Account" asp-action="TransferFunds" class="btn btn-primary btn-lg btn-block">
-							Transfer Funds
+						<a asp-controller="Account" asp-action="TransferFundsToInternalAccount" class="btn btn-primary btn-lg btn-block">
+							Transfer Between My Accounts
+						</a>
+						<a asp-controller="Account" asp-action="TransferFundsToExternalAccount" class="btn btn-primary btn-lg btn-block">
+							Transfer to External Account
 						</a>
 					</div>
 				</div>
@@ -120,7 +104,7 @@
 			</div>
 		</div>
 	</div>
-	@if (TempData["Modal"]?.ToString() == "Active")
+	@if (TempData["ExternalTransferModal"]?.ToString() == "Active")
 	{
 		<div class="modal fade active" id="modaldemo5">
 			<div class="modal-dialog modal-dialog-centered" role="document">
@@ -139,6 +123,29 @@
 		<script>
 			window.addEventListener("DOMContentLoaded", function () {
 				var modal = new bootstrap.Modal(document.getElementById('modaldemo5'));
+				modal.show();
+			});
+		</script>
+	}
+	@if (TempData["InternalTransferModal"]?.ToString() == "Active")
+	{
+		<div class="modal fade" id="modaldemo4">
+			<div class="modal-dialog modal-dialog-centered" role="document">
+				<div class="modal-content tx-size-sm">
+					<div class="modal-header">
+						<button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button"><span aria-hidden="true">&times;</span></button>
+					</div>
+					<div class="modal-body tx-center pd-y-20 pd-x-20">
+						<i class="icon ion-ios-checkmark-circle-outline tx-100 tx-success lh-1 mg-t-20 d-inline-block"></i>
+						<h4 class="tx-success tx-semibold mg-b-20">Success</h4>
+						<p class="mg-b-20 mg-x-20">Transfer processed successfully</p><button aria-label="Close" class="btn ripple btn-success pd-x-25" data-bs-dismiss="modal" type="button">Continue</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<script>
+			window.addEventListener("DOMContentLoaded", function () {
+				var modal = new bootstrap.Modal(document.getElementById('modaldemo4'));
 				modal.show();
 			});
 		</script>
