--- a/GuardianCapitalLLC/Views/Account/ReviewInternalTransfer.cshtml
+++ b/GuardianCapitalLLC/Views/Account/ReviewInternalTransfer.cshtml
@@ -1,4 +1,4 @@
-﻿@model TransferFundsVM
+﻿@model InternalTransferFundsVM
 @using System.Text.RegularExpressions
 @{
 	Layout = "_ClientLayout";
@@ -17,14 +17,10 @@
 				</div>
 			}
 			<div class="card-body text-center rounded">
-				<form asp-action="Transfer">
-					<input type="hidden" asp-for="AccountId" />
-					<input type="hidden" asp-for="TransferType" />
-					<input type="hidden" asp-for="ToAccountNumber" />
-					<input type="hidden" asp-for="RecipientName" />
+				<form asp-action="ConfirmInternalTransfer">
+					<input type="hidden" asp-for="FromAccountId" />
+					<input type="hidden" asp-for="ToAccountId" />
 					<input type="hidden" asp-for="Amount" />
-					<input type="hidden" asp-for="Purpose" />
-					<input type="hidden" asp-for="Description" />
 					<input type="hidden" asp-for="Pin" />
 					<i class="fa fa-key mg-b-20 tx-50 text-success"></i>
 					<h3 class="mt-3 text-dark">Confirm Transfer</h3>
@@ -53,21 +49,7 @@
 										</div>
 										<div class="pb-0 mt-0">
 											<div class="d-flex">
-												<h4 class="tx-18 font-weight-semibold mb-0">@Model.ToAccountNumber</h4>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xxl-3">
-								<div class="row border-end bd-xs-e-0 p-3">
-									<div class="pt-4 pb-3">
-										<div class="d-flex">
-											<h6 class="mb-2 tx-12">Recipient</h6>
-										</div>
-										<div class="pb-0 mt-0">
-											<div class="d-flex">
-												<h4 class="tx-18 font-weight-semibold mb-0">@Model.RecipientName</h4>
+												<h4 class="tx-18 font-weight-semibold mb-0">@Regex.Replace(Model.ToAccount.Type.ToString(), "(\\B[A-Z])", " $1")</h4>
 											</div>
 										</div>
 									</div>
@@ -81,21 +63,7 @@
 										</div>
 										<div class="pb-0 mt-0">
 											<div class="d-flex">
-												<h4 class="tx-18 text-success font-weight-semibold mb-0">$@Model.Amount</h4>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xxl-3">
-								<div class="row border-end bd-xs-e-0 p-3">
-									<div class="pt-4 pb-3">
-										<div class="d-flex">
-											<h6 class="mb-2 tx-12">Purpose</h6>
-										</div>
-										<div class="pb-0 mt-0">
-											<div class="d-flex">
-												<h4 class="tx-18 font-weight-semibold mb-0">@Regex.Replace(Model.Purpose, "(\\B[A-Z])", " $1")</h4>
+												<h4 class="tx-18 text-success font-weight-semibold mb-0">$@Model.Amount.ToString("N2")</h4>
 											</div>
 										</div>
 									</div>
