--- a/GuardianCapitalLLC/Views/Account/_ClientLayout.cshtml
+++ b/GuardianCapitalLLC/Views/Account/_ClientLayout.cshtml
@@ -4,9 +4,6 @@
 	<meta charset="UTF-8">
 	<meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=0'>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="Description" content="Bootstrap Responsive Admin Web Dashboard HTML5 Template">
-	<meta name="Author" content="Spruko Technologies Private Limited">
-	<meta name="Keywords" content="admin,admin dashboard,admin dashboard template,admin panel template,admin template,admin theme,bootstrap 4 admin template,bootstrap 4 dashboard,bootstrap admin,bootstrap admin dashboard,bootstrap admin panel,bootstrap admin template,bootstrap admin theme,bootstrap dashboard,bootstrap form template,bootstrap panel,bootstrap ui kit,dashboard bootstrap 4,dashboard design,dashboard html,dashboard template,dashboard ui kit,envato templates,flat ui,html,html and css templates,html dashboard template,html5,jquery html,premium,premium quality,sidebar bootstrap 4,template admin bootstrap 4" />
 
 	<!-- Title -->
 	<title> Guardian Capital - Account </title>
@@ -101,17 +98,58 @@
 						</ol>
 					</nav>
 					@RenderBody()
+					@if (ViewBag.HideBanner != true)
+					{
+						<div class="accent-line2 mt-5"></div>
+						<div class="row row-sm contact-info">
+							<div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
+								<div class="card bg-gray-400 bd-0">
+									<div class="card-body text-muted">
+										<h5 class="card-title text-dark tx-medium mg-b-10">Vancouver Office</h5>
+										<p class="card-subtitle mg-b-15 mt-3">Marine Building</p>
+										<p class="card-subtitle mg-b-15">355 Burrard Street • Suite 1610</p>
+										<p class="card-subtitle mg-b-15">Vancouver, BC V6C 2GB</p>
+										<p class="card-subtitle mg-b-15 mt-3">E: <span class="text-dark">vancouver@guardiancapital.com</span></p>
+										<p class="card-subtitle mg-b-15">T: <span class="text-dark">1-877-704-2430</span></p>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
+								<div class="card bg-gray-400 bd-0">
+									<div class="card-body text-muted">
+										<h5 class="card-title text-dark tx-medium mg-b-10">Calgary Office</h5>
+										<p class="card-subtitle mg-b-15 mt-3">Bentall Kennedy Building</p>
+										<p class="card-subtitle mg-b-15">1030 - 640 5th Avenue S.W.</p>
+										<p class="card-subtitle mg-b-15">Calgary, AB T2P 3G4</p>
+										<p class="card-subtitle mg-b-15 mt-3">E: <span class="text-dark">calgary@guardiancapital.com</span></p>
+										<p class="card-subtitle mg-b-15">T: <span class="text-dark">1-877-704-2430</span></p>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
+								<div class="card bg-gray-400 bd-0">
+									<div class="card-body text-muted">
+										<h5 class="card-title text-dark tx-medium mg-b-10">Toronto Office</h5>
+										<p class="card-subtitle mg-b-15 mt-3">Commerce Court West</p>
+										<p class="card-subtitle mg-b-15">199 Bay Street • Suite 3100</p>
+										<p class="card-subtitle mg-b-15">PO Box 201 • Toronot, Ontario. M5L 1E8</p>
+										<p class="card-subtitle mg-b-15 mt-3">E: <span class="text-dark">toronto@guardiancapital.com</span></p>
+										<p class="card-subtitle mg-b-15">T: <span class="text-dark">1-877-704-2430</span></p>
+									</div>
+								</div>
+							</div>
+						</div>
+					}
 				</div>
 			</div>
 			<!-- Footer opened -->
-			<div class="main-footer text-white">
+			<div class="main-footer text-white p-1">
 				<div class="container-fluid pt-0 ht-100p">
-					<div class="breadcrumb-header justify-content-between">
+					<div class="breadcrumb-header justify-content-between m-0">
 						<div class="left-content">
 							©<script>document.write(new Date().getFullYear());</script> Guardian Capital LLC.
 						</div>
 						<div class="justify-content-center mt-2">
-							
 						</div>
 					</div>
 				</div>
@@ -120,8 +158,6 @@
 		</div>
 	</div>
 	<!-- End Page -->
-	<!-- Back-to-top -->
-	<a href="#top" id="back-to-top"><i class="las la-arrow-up"></i></a>
 
 	<!-- JQuery min js -->
 	<script src="~/plugins/jquery/jquery.min.js"></script>
