--- a/GuardianCapitalLLC/Views/Admin/Create.cshtml
+++ b/GuardianCapitalLLC/Views/Admin/Create.cshtml
@@ -30,7 +30,7 @@
 				</div>
 				<div class="form-group mb-0 mt-3 justify-content-end">
 					<div>
-						<button type="submit" class="btn btn-success px-5">Create Client</button>
+						<button type="submit" class="btn btn-success px-5">Create Admin</button>
 						<a asp-controller="Admin" asp-action="Index" class="btn btn-danger ms-4 px-5">Cancel</a>
 					</div>
 				</div>
