--- a/GuardianCapitalLLC/wwwroot/css/account.css
+++ b/GuardianCapitalLLC/wwwroot/css/account.css
@@ -87,6 +87,14 @@ body {
     border-radius: 2px;
 }
 
+.accent-line2 {
+    width: 100%;
+    height: 1px;
+    background: linear-gradient(90deg, #8b7355, #a68b5b);
+    margin: 20px 0;
+    border-radius: 2px;
+}
+
 .geometric-shapes {
     position: absolute;
     top: 0;
@@ -184,5 +192,9 @@ body {
 }
 
 .account-information{
+    font-family: "Poppins", sans-serif !important;
+}
+
+.contact-info {
     font-family: "Poppins", sans-serif !important;
 }
