--- a/GuardianCapitalLLC/Views/Shared/_Layout.cshtml
+++ b/GuardianCapitalLLC/Views/Shared/_Layout.cshtml
@@ -244,5 +244,16 @@
 	<!-- modal js -->
 	<script src="~/js/modal.js"></script>
 
+	<!--Internal Fileuploads js-->
+	<script src="~/plugins/fileuploads/js/fileupload.js"></script>
+	<script src="~/plugins/fileuploads/js/file-upload.js"></script>
+
+	<!--Internal Fancy uploader js-->
+	<script src="~/plugins/fancyuploder/jquery.ui.widget.js"></script>
+	<script src="~/plugins/fancyuploder/jquery.fileupload.js"></script>
+	<script src="~/plugins/fancyuploder/jquery.iframe-transport.js"></script>
+	<script src="~/plugins/fancyuploder/jquery.fancy-fileupload.js"></script>
+	<script src="~/plugins/fancyuploder/fancy-uploader.js"></script>
+
 </body>
 </html>
