--- a/GuardianCapitalLLC/Views/Users/Details.cshtml
+++ b/GuardianCapitalLLC/Views/Users/Details.cshtml
@@ -70,6 +70,54 @@
 						<button type="submit" class="btn btn-warning">Generate New PIN</button>
 					</form>
 				</div>
+				@if (Model.Files != null && Model.Files.Any())
+				{
+					<div class="mt-5">
+						<h5 class="tx-dark tx-medium mg-b-10">Uploaded Files</h5>
+					</div>
+					<div class="row">
+						@foreach (var file in Model.Files)
+						{
+							<div class="col-xl-2 col-md-4 col-sm-6 mt-1">
+								<div class="card p-0 border">
+									<div class="d-flex align-items-center px-3 pt-3">
+										<div class="float-end ms-auto">
+											<a href="#" class="option-dots" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+												<i class="fe fe-more-vertical"></i>
+											</a>
+											<div class="dropdown-menu">
+												<!-- 🔽 Download link -->
+												<a class="dropdown-item" asp-action="Download" asp-controller="Users" asp-route-id="@file.Id">
+													<i class="fe fe-download me-2"></i> Download
+												</a>
+
+												<!-- 🔽 Delete form -->
+												<form asp-controller="Users" asp-action="DeleteFile" method="post" class="dropdown-item p-0"
+													  onsubmit="return confirm('Are you sure you want to delete this file?');">
+													@Html.AntiForgeryToken()
+													<input type="hidden" name="userId" value="@Model.Id" />
+													<input type="hidden" name="id" value="@file.Id" />
+													<button type="submit" class="btn btn-link dropdown-item text-danger">
+														<i class="fe fe-trash me-2"></i> Delete
+													</button>
+												</form>
+											</div>
+										</div>
+									</div>
+									<div class="card-body pt-0 text-center">
+										<div class="file-manger-icon">
+											<img src="~/img/files/doc.png" alt="file icon" class="br-7" />
+										</div>
+										<h6 class="mb-1 font-weight-semibold text-truncate" style="max-width: 100%;">
+											@file.FileName
+										</h6>
+									</div>
+								</div>
+							</div>
+						}
+					</div>
+				}
+				
 				<div>
 					<h5 class="tx-dark tx-medium mg-b-10 mt-5">Transactions</h5>
 				</div>
