Commit slight currency error

--- a/GuardianCapitalLLC/Views/Account/Index.cshtml
+++ b/GuardianCapitalLLC/Views/Account/Index.cshtml
@@ -77,7 +77,7 @@
 									</div>
 									<div class="ms-auto my-auto">
 										<div class="d-flex">
-												<span class="me-4 mt-1 font-weight-semibold tx-16">$@bankAccount.Balance.ToString("N2")</span>
+											<span class="me-4 mt-1 font-weight-semibold tx-16 market-price" data-usd="@bankAccount.Balance">$@bankAccount.Balance.ToString("N2")</span>
 										</div>
 									</div>
 								</div>
