--- a/GuardianCapitalLLC/Views/Account/Index.cshtml
+++ b/GuardianCapitalLLC/Views/Account/Index.cshtml
@@ -85,6 +85,9 @@
 								</div>
 							}
 						</div>
+						<a asp-controller="Account" asp-action="Deposit" class="btn btn-info btn-lg btn-block">
+							Deposit to Account
+						</a>
 						<a asp-controller="Account" asp-action="TransferFundsToInternalAccount" class="btn btn-primary btn-lg btn-block">
 							Transfer Between My Accounts
 						</a>
@@ -117,7 +120,7 @@
 											<td>@transaction.Date.ToLocalTime().ToString("MM-dd-yyyy HH:mm tt")</td>
 											<td>@Regex.Replace(transaction.AccountName, "(\\B[A-Z])", " $1")</td>
 											<td>@Regex.Replace(transaction.Type.ToString(), "(\\B[A-Z])", " $1")</td>
-											@if (transaction.Type.ToString().Contains("Transfer") || transaction.Type.ToString() == "Withdrawal")
+											@if (transaction.Type.ToString().Contains("Transfer") || transaction.Type.ToString() == "Withdrawal" || transaction.Type.ToString() == "ServiceFee")
 											{
 												<td class="market-price" data-usd="@transaction.Amount" data-type="debit">-$@transaction.Amount.ToString("N2")</td>
 											}
