--- a/GuardianCapitalLLC/Views/Account/ReviewExternalTransfer.cshtml
+++ b/GuardianCapitalLLC/Views/Account/ReviewExternalTransfer.cshtml
@@ -18,7 +18,7 @@
 					</div>
 				</div>
 			}
-			<div class="card-body text-center rounded">
+			<div class="card-body rounded">
 				<form asp-action="ConfirmExternalTransfer">
 					<input type="hidden" asp-for="AccountId" />
 					<input type="hidden" asp-for="TransferType" />
@@ -28,100 +28,107 @@
 					<input type="hidden" asp-for="Purpose" />
 					<input type="hidden" asp-for="Description" />
 					<input type="hidden" asp-for="Pin" />
-					<i class="fa fa-key mg-b-20 tx-50 text-success"></i>
-					<h3 class="mt-3 text-dark">Confirm Transfer</h3>
-					<span>Please review the transfer details below</span>
-					<div class="card px-3 ps-4 bg-light mt-5">
-						<div class="row index1">
-							<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xxl-3">
-								<div class="row border-end bd-xs-e-0 p-3">
-									<div class="pt-4 pb-3">
-										<div class="d-flex">
-											<h6 class="mb-2 tx-12">From Account</h6>
-										</div>
-										<div class="pb-0 mt-0">
+					<div class="text-center">
+						<i class="fa fa-key mg-b-20 tx-50 text-success"></i>
+						<h3 class="mt-3 text-dark">Confirm Transfer</h3>
+						<span>Please review the transfer details below</span>
+						<div class="card px-3 ps-4 bg-light mt-5">
+							<div class="row index1 text-center">
+								<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xxl-3">
+									<div class="row border-end bd-xs-e-0 p-3">
+										<div class="pt-4 pb-3">
 											<div class="d-flex">
-												<h4 class="tx-18 font-weight-semibold mb-0">@Regex.Replace(Model.FromAccount.Type.ToString(), "(\\B[A-Z])", " $1")</h4>
+												<h6 class="mb-2 tx-12">From Account</h6>
+											</div>
+											<div class="pb-0 mt-0">
+												<div class="d-flex">
+													<h4 class="tx-18 font-weight-semibold mb-0">@Regex.Replace(Model.FromAccount.Type.ToString(), "(\\B[A-Z])", " $1")</h4>
+												</div>
 											</div>
 										</div>
 									</div>
 								</div>
-							</div>
-							<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xxl-3">
-								<div class="row border-end bd-xs-e-0 p-3">
-									<div class="pt-4 pb-3">
-										<div class="d-flex">
-											<h6 class="mb-2 tx-12">To Account</h6>
-										</div>
-										<div class="pb-0 mt-0">
+								<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xxl-3">
+									<div class="row border-end bd-xs-e-0 p-3">
+										<div class="pt-4 pb-3">
 											<div class="d-flex">
-												<h4 class="tx-18 font-weight-semibold mb-0">@Model.ToAccountNumber</h4>
+												<h6 class="mb-2 tx-12">To Account</h6>
+											</div>
+											<div class="pb-0 mt-0">
+												<div class="d-flex">
+													<h4 class="tx-18 font-weight-semibold mb-0">@Model.ToAccountNumber</h4>
+												</div>
 											</div>
 										</div>
 									</div>
 								</div>
-							</div>
-							<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xxl-3">
-								<div class="row border-end bd-xs-e-0 p-3">
-									<div class="pt-4 pb-3">
-										<div class="d-flex">
-											<h6 class="mb-2 tx-12">Recipient</h6>
-										</div>
-										<div class="pb-0 mt-0">
+								<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xxl-3">
+									<div class="row border-end bd-xs-e-0 p-3">
+										<div class="pt-4 pb-3">
 											<div class="d-flex">
-												<h4 class="tx-18 font-weight-semibold mb-0">@Model.RecipientName</h4>
+												<h6 class="mb-2 tx-12">Recipient</h6>
+											</div>
+											<div class="pb-0 mt-0">
+												<div class="d-flex">
+													<h4 class="tx-18 font-weight-semibold mb-0">@Model.RecipientName</h4>
+												</div>
 											</div>
 										</div>
 									</div>
 								</div>
-							</div>
-							<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xxl-3">
-								<div class="row border-end bd-xs-e-0 p-3">
-									<div class="pt-4 pb-3">
-										<div class="d-flex">
-											<h6 class="mb-2 tx-12">Amount</h6>
-										</div>
-										<div class="pb-0 mt-0">
+								<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xxl-3">
+									<div class="row border-end bd-xs-e-0 p-3">
+										<div class="pt-4 pb-3">
 											<div class="d-flex">
-												<h4 data-usd="@Model.Amount.ToString(CultureInfo.InvariantCulture)" class="tx-18 text-success font-weight-semibold mb-0 market-price">
-													<span class="balance-text">
-														$@Model.Amount.ToString("N2")
-													</span>
-												</h4>
+												<h6 class="mb-2 tx-12">Amount</h6>
+											</div>
+											<div class="pb-0 mt-0">
+												<div class="d-flex">
+													<h4 data-usd="@Model.Amount.ToString(CultureInfo.InvariantCulture)" class="tx-18 text-success font-weight-semibold mb-0 market-price">
+														<span class="balance-text">
+															$@Model.Amount.ToString("N2")
+														</span>
+													</h4>
+												</div>
 											</div>
 										</div>
 									</div>
 								</div>
-							</div>
-							<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xxl-3">
-								<div class="row border-end bd-xs-e-0 p-3">
-									<div class="pt-4 pb-3">
-										<div class="d-flex">
-											<h6 class="mb-2 tx-12">Purpose</h6>
-										</div>
-										<div class="pb-0 mt-0">
+								<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xxl-3">
+									<div class="row border-end bd-xs-e-0 p-3">
+										<div class="pt-4 pb-3">
 											<div class="d-flex">
-												<h4 class="tx-18 font-weight-semibold mb-0">@Regex.Replace(Model.Purpose, "(\\B[A-Z])", " $1")</h4>
+												<h6 class="mb-2 tx-12">Purpose</h6>
+											</div>
+											<div class="pb-0 mt-0">
+												<div class="d-flex">
+													<h4 class="tx-18 font-weight-semibold mb-0">@Regex.Replace(Model.Purpose, "(\\B[A-Z])", " $1")</h4>
+												</div>
 											</div>
 										</div>
 									</div>
 								</div>
-							</div>
-							<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xxl-3">
-								<div class="row border-end bd-xs-e-0 p-3">
-									<div class="pt-4 pb-3">
-										<div class="d-flex">
-											<h6 class="mb-2 tx-12">Transfer Date</h6>
-										</div>
-										<div class="pb-0 mt-0">
+								<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xxl-3">
+									<div class="row border-end bd-xs-e-0 p-3">
+										<div class="pt-4 pb-3">
 											<div class="d-flex">
-												<h4 class="tx-18 font-weight-semibold mb-0">@DateTime.Now.ToLocalTime().ToString("MM-dd-yyyy")</h4>
+												<h6 class="mb-2 tx-12">Transfer Date</h6>
+											</div>
+											<div class="pb-0 mt-0">
+												<div class="d-flex">
+													<h4 class="tx-18 font-weight-semibold mb-0">@DateTime.Now.ToLocalTime().ToString("MM-dd-yyyy")</h4>
+												</div>
 											</div>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
+					</div>
+					<div>
+						<span class="tx-12 mb-0 text-muted market-price" data-usd="50">
+							*<span class="balance-text">$50 USD</span> Service Fee not included
+						</span>
 					</div>
 					<div class="modal-footer">
 						<a asp-controller="Account" asp-action="Index" class="btn btn-outline-dark ms-4 px-5">Cancel</a>
