--- a/GuardianCapitalLLC/Views/Account/TransferFundsToInternalAccount.cshtml
+++ b/GuardianCapitalLLC/Views/Account/TransferFundsToInternalAccount.cshtml
@@ -58,8 +58,8 @@
 				</div>
 
 				<div class="form-group">
-					<label class="form-label">Security Pin</label>
-					<input asp-for="Pin" type="password" class="form-control" placeholder="Enter your 4-digit PIN" maxlength="4" inputmode="numeric" pattern="\d{4}">
+					<label class="form-label">Password</label>
+					<input asp-for="Pin" type="password" class="form-control" placeholder="Enter your password">
 				</div>
 
 				<div class="modal-footer">
